# ESP8266Audio

./: CMakeLists.txt  README.md
src/: AudioFileSource.h  AudioFileSourceID3.h  AudioFileSourceSD.cpp  AudioFileSourceSD.h  AudioGenerator.h  AudioGeneratorAAC.cpp  AudioGeneratorFLAC.cpp  AudioGeneratorMP3.cpp  AudioGeneratorOpus.cpp  AudioGeneratorOpus.h  AudioGeneratorWAV.cpp  AudioLogger.h  AudioOutput.h  AudioOutputI2S.cpp  AudioOutputI2S.h  AudioStatus.h  CMakeLists.txt
src/libflac/: CMakeLists.txt  config.h  crc.c  stream_decoder.c
src/libflac/FLAC/: ordinals.h
src/libflac/private/: bitmath.h  crc.h
src/libhelix-aac/: CMakeLists.txt  aaccommon.h  aactabs.c  assembly.h  buffers.c  dequant.c  fft.c  huffman.c  hufftabs.c  pns.c  sbr.c  sbrhfadj.c  sbrhfgen.c  sbrhuff.c  sbrqmf.c  sbrtabs.c  stproc.c  tns.c  trigtabs.c
src/libmad/: CMakeLists.txt  bit.c  frame.c  huffman.c  layer3.c  stream.c  synth.c
src/libogg/: CMakeLists.txt  crctable.h  framing.c
src/libopus/: CMakeLists.txt
src/libopus/celt/: CMakeLists.txt  cwrs.c
src/libopus/silk/: CMakeLists.txt  VAD.c  sigm_Q15.c
src/libopus/silk/fixed/: CMakeLists.txt
src/opusfile/: CMakeLists.txt
