project(ESP8266AudioPico)
        
add_library(silk STATIC
A2NLSF.c
CNG.c
HP_variable_cutoff.c
LPC_analysis_filter.c
LPC_fit.c
LPC_inv_pred_gain.c
LP_variable_cutoff.c
NLSF2A.c
NLSF_VQ.c
NLSF_VQ_weights_laroia.c
NLSF_decode.c
NLSF_del_dec_quant.c
NLSF_encode.c
NLSF_stabilize.c
NLSF_unpack.c
NSQ.c
NSQ_del_dec.c
PLC.c
VAD.c
VQ_WMat_EC.c
ana_filt_bank_1.c
biquad_alt.c
bwexpander.c
bwexpander_32.c
check_control_input.c
code_signs.c
control_SNR.c
control_audio_bandwidth.c
control_codec.c
debug.c
dec_API.c
decode_core.c
decode_frame.c
decode_indices.c
decode_parameters.c
decode_pitch.c
decode_pulses.c
decoder_set_fs.c
enc_API.c
encode_indices.c
encode_pulses.c
gain_quant.c
init_decoder.c
init_encoder.c
inner_prod_aligned.c
interpolate.c
lin2log.c
log2lin.c
pitch_est_tables.c
process_NLSFs.c
quant_LTP_gains.c
resampler.c
resampler_down2.c
resampler_down2_3.c
resampler_private_AR2.c
resampler_private_IIR_FIR.c
resampler_private_down_FIR.c
resampler_private_up2_HQ.c
resampler_rom.c
resampler_structs.h
shell_coder.c
sigm_Q15.c
sort.c
stereo_LR_to_MS.c
stereo_MS_to_LR.c
stereo_decode_pred.c
stereo_encode_pred.c
stereo_find_predictor.c
stereo_quant_pred.c
sum_sqr_shift.c
table_LSF_cos.c
tables_LTP.c
tables_NLSF_CB_NB_MB.c
tables_NLSF_CB_WB.c
tables_gain.c
tables_other.c
tables_pitch_lag.c
tables_pulses_per_block.c
)
add_subdirectory(fixed)
target_link_libraries(silk fixed)